fix: Align More buttons and headers in FileList

--- a/src/drive/styles/filelist.styl
+++ b/src/drive/styles/filelist.styl
@@ -169,7 +169,6 @@ column-width-thumbnail-bigger = 7rem
 .fil-content-file-action
 .fil-content-header-action
     flex 0 0 5%
-    text-align right
     width 1.5rem
     padding 0 0 0 .5rem
     margin-right .5rem
@@ -373,6 +372,9 @@ column-width-thumbnail-bigger = 7rem
     .fil-content-mobile-header.fil-content-header-action
         width auto
         padding 0
+        flex 0 0 3rem
+        display flex
+        justify-content center
 
     .fil-content-cell.fil-content-file
     .fil-content-row-bigger .fil-content-cell.fil-content-file
@@ -392,6 +394,8 @@ column-width-thumbnail-bigger = 7rem
     .fil-content-file-action
         opacity    1
         flex       0 0 3rem
+        display flex
+        justify-content center
         padding    0
 
     .fil-content-cell
